Abyss: Styled the widget customization mode
(integrated from komodo (trunk) change 81668 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13549 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/panes.less
@@ -48,3 +48,13 @@
 @list-pane-listbox-row-background-odd:            @list-pane-tree-row-background;
 @list-pane-listbox-row-background-selected:       @list-pane-tree-row-background-selected;
 @list-pane-listbox-row-background-focus:          @list-pane-tree-row-background-focus;
+
+/* Customization styling */
+@pane-customize-droptarget-background:              rgba(255, 255, 255, 0.01);
+@pane-customize-containerempty-color:               graytext;
+@pane-customize-draggable-background-color:         rgba(255, 255, 255, 0.5);
+@pane-customize-draggable-border:                   2px dashed rgba(0, 0, 0, 0.3);
+@pane-customize-draggable-border-hover:             2px dashed rgba(0, 0, 0, 0.5);
+@pane-customize-droppable-background-color:         rgba(255, 255, 255, 0.3);
+@pane-customize-droppable-border:                   2px dashed rgba(0, 0, 0, 0.3);
+@pane-customize-droppable-border-hover:             2px dashed rgba(0, 0, 0, 0.5);
