--- a/src/modules/abyss_skin/skin/_config/panes.less
+++ b/src/modules/abyss_skin/skin/_config/panes.less
@@ -20,3 +20,13 @@
 
 @list-pane-tree-header-border-width:              1px 0;
 @list-pane-listbox-header-border-width:           @list-pane-tree-header-border-width;
+
+/* Customization styling */
+@pane-customize-droptarget-background:              rgba(0, 0, 0, 0.01);
+@pane-customize-containerempty-color:               graytext;
+@pane-customize-draggable-background-color:         rgba(0, 0, 0, 0.5);
+@pane-customize-draggable-border:                   2px dashed rgba(255, 255, 255, 0.3);
+@pane-customize-draggable-border-hover:             2px dashed rgba(255, 255, 255, 0.5);
+@pane-customize-droppable-background-color:         rgba(0, 0, 0, 0.3);
+@pane-customize-droppable-border:                   2px dashed rgba(255, 255, 255, 0.3);
+@pane-customize-droppable-border-hover:             2px dashed rgba(255, 255, 255, 0.5);
