fix: Skin: Style menuitem checkbox / radiobox items as intended (so they can show alongside list-style-images)
(integrated from komodo (trunk) change 81669 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13550 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -47,33 +47,40 @@ button, toolbarbutton, menuitem
 
 /* Check / Radio items */
 
-menuitem[type="checkbox"]:not(.languageicon)
+menuitem[type="checkbox"]
 {
-    list-style-image: @icon-checkbox;
-
-    &[checked="true"]
+    & > .menu-iconic-left
     {
-        list-style-image: @icon-checkbox-checked;
+        -moz-appearance: none;
+        background-image: @icon-checkbox;
+        background-repeat: no-repeat;
+        background-position: top left;
+        width: 16px;
+        padding-left: 2px;
     }
 
-    .menu-iconic-left
+    &[checked="true"] > .menu-iconic-left
     {
-        background: @icon-checkbox-background;
+        background-image: @icon-checkbox-checked;
     }
 }
 
 menuitem[type="radio"]
 {
-    list-style-image: @icon-radio;
-
-    &[checked="true"]
+    & > .menu-iconic-left
     {
-        list-style-image: @icon-radio-selected;
+        -moz-appearance: none;
+        background-image: @icon-radio;
+        background-repeat: no-repeat;
+        background-position: top left;
+        width: 16px;
+        padding-left: 2px;
     }
 
-    .menu-iconic-left
+    &[checked="true"] > .menu-iconic-left,
+    &[selected="true"] > .menu-iconic-left
     {
-        background: @icon-radio-background;
+        background-image: @icon-radio-selected;
     }
 }
 
