fix: Skin: Fixed menuitem checkbox and radio appearance on Windows and Mac
(integrated from komodo (trunk) change 81713 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13563 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/menus.less
+++ b/src/chrome/komodo/skin/plat/mac/menus.less
@@ -24,6 +24,28 @@ menu, menuitem
     }
 }
 
+menuitem[type="checkbox"] > .menu-iconic-left
+{
+    margin-left: -22px;
+    min-width: 22px;
+    min-height: 17px;
+    padding-left: 0;
+}
+
+menuitem[type="radio"] > .menu-iconic-left
+{
+    margin-left: -22px;
+    min-width: 22px;
+    min-height: 17px;
+    padding-left: 0;
+}
+
+menuitem.languageicon[type="checkbox"] image
+{
+    margin-left: 22px !important;
+    margin-right: 4px !important;
+}
+
 /* Disable main menubar menu icons */
 #toolbar-menubar menu.menu-iconic,
 #toolbar-menubar menuitem.menuitem-iconic
