--- a/src/chrome/komodo/skin/plat/shared/_config/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/menus.less
@@ -39,3 +39,6 @@
 @menupopup-separator-background:        disabled;
 @menupopup-separator-color:             disabled;
 @menupopup-menu-arrow-appearance:       disabled;
+
+@menuitem-checkbox-icon-appearance:     disabled;
+@menuitem-radiobox-icon-appearance:     disabled;
