--- a/src/chrome/komodo/skin/plat/shared/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/menus.less
@@ -126,3 +126,13 @@ menupopup
 {
     visibility: collapse;
 }
+
+menuitem[type="checkbox"] > .menu-iconic-left
+{
+    -moz-appearance: @menuitem-checkbox-icon-appearance;
+}
+
+menuitem[type="radiobox"] > .menu-iconic-left
+{
+    -moz-appearance: @menuitem-radiobox-icon-appearance;
+}
