--- a/src/modules/abyss_skin/content/platform/win/platform.less
+++ b/src/modules/abyss_skin/content/platform/win/platform.less
@@ -4,3 +4,15 @@ tabpanels caption
 {
     -moz-appearance: none;
 }
+
+menuitem[type="checkbox"] > .menu-iconic-left
+{
+    min-width: 2.45em;
+    min-height: 17px;
+}
+
+menuitem.languageicon[type="checkbox"] image
+{
+    margin-left: 22px !important;
+    margin-right: 4px !important;
+}
