--- a/src/modules/abyss_skin/skin/_config/menus.less
+++ b/src/modules/abyss_skin/skin/_config/menus.less
@@ -39,3 +39,6 @@
 @menupopup-separator-appearance:        none;
 @menupopup-separator-background:        -moz-linear-gradient(left, fade(@window-background, 100%) 0%, rgba(80, 157, 212, 0.2) 50%, fade(@window-background, 100%) 100%);
 @menupopup-menu-arrow-appearance:       none;
+
+@menuitem-checkbox-icon-appearance:     none;
+@menuitem-radiobox-icon-appearance:     none;
