fix: Skin: Fix abyss getting orange borders on tabs, windows tabs now properly use platform config for styling
(integrated from komodo (trunk) change 81714 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13564 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -24,6 +24,7 @@
 
 @tab-box-shadow:                        none;
 @tab-border:                            disabled;
+@tab-border-top:                        disabled;
 @tab-transition:                        none;
 @tab-background:                        disabled;
 @tab-background-vertical:               disabled;
@@ -31,6 +32,7 @@
 @tab-spacer-border:                     disabled;
 
 @tab-selected-border:                   @tab-border;
+@tab-selected-border-top:               disabled;
 @tab-selected-background:               @tab-background;
 @tab-selected-box-shadow:               0px 0px 5px rgba(0, 0, 0, 0.35);
 @tab-selected-color:                    disabled;
@@ -38,6 +40,7 @@
 @tab-selected-box-shadow-vertical:      none;
 
 @tab-hover-border:                      @tab-border;
+@tab-hover-border-top:                  disabled;
 @tab-hover-background:                  disabled;
 @tab-hover-box-shadow:                  @tab-box-shadow;
 @tab-hover-color:                       disabled;
@@ -45,6 +48,7 @@
 @tab-hover-box-shadow-vertical:         @tab-hover-box-shadow;
 
 @tab-active-border:                     @tab-border;
+@tab-active-border-top:                 disabled;
 @tab-active-background:                 @tab-hover-background;
 @tab-active-box-shadow:                 @tab-box-shadow;
 @tab-active-color:                      disabled;
