--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -277,6 +277,7 @@ tabs:not(.tabs-bottom) tab
     box-shadow: @tab-box-shadow;
     border: 0;
     border-right: @tab-border;
+    border-top: @tab-border-top;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -308,6 +309,7 @@ tabs:not(.tabs-bottom) tab
         border-right: @tab-hover-border;
         background: @tab-hover-background;
         box-shadow: @tab-hover-box-shadow;
+        border-top: @tab-hover-border-top;
 
         .tab-text
         {
@@ -319,6 +321,7 @@ tabs:not(.tabs-bottom) tab
         border-right: @tab-active-border;
         background: @tab-active-background;
         box-shadow: @tab-active-box-shadow;
+        border-top: @tab-active-border-top;
 
         .tab-text
         {
@@ -332,6 +335,7 @@ tabs:not(.tabs-bottom) tab
         border-right: @tab-selected-border;
         background: @tab-selected-background;
         box-shadow: @tab-selected-box-shadow;
+        border-top: @tab-selected-border-top;
 
         .tab-text
         {
