--- a/src/modules/abyss_skin/skin/_config/tabs.less
+++ b/src/modules/abyss_skin/skin/_config/tabs.less
@@ -24,6 +24,7 @@
 
 @tab-box-shadow:                        inset -1px 0px 0px 0px rgba(255, 255, 255, 0.02);
 @tab-border:                            1px solid lighten(@main-border-color, 5%);
+@tab-border-top:                        disabled;
 @tab-transition:                        all 0.20s linear;
 @tab-background:                        -moz-linear-gradient(top, rgba(39,40,42,0.1) 15%, rgba(0,0,0,0.2) 100%);
 @tab-background-vertical:               @tab-background;
@@ -31,6 +32,7 @@
 @tab-spacer-border:                     none;
 
 @tab-selected-border:                   @tab-border;
+@tab-selected-border-top:               disabled;
 @tab-selected-background:               -moz-linear-gradient(top, rgba(39,40,42,0.1) 5%, rgba(80, 157, 212, 0.5) 100%);
 @tab-selected-box-shadow:               @tab-box-shadow;
 @tab-selected-color:                    lighten(@window-color, 25%);
@@ -38,6 +40,7 @@
 @tab-selected-box-shadow-vertical:      @tab-selected-box-shadow;
 
 @tab-hover-border:                      @tab-border;
+@tab-hover-border-top:                  disabled;
 @tab-hover-background:                  -moz-linear-gradient(top, rgba(39,40,42,0.1) 15%, rgba(80, 157, 212, 0.2) 100%);
 @tab-hover-box-shadow:                  @tab-box-shadow;
 @tab-hover-color:                       @tab-color;
@@ -45,6 +48,7 @@
 @tab-hover-box-shadow-vertical:         @tab-hover-box-shadow;
 
 @tab-active-border:                     @tab-selected-border;
+@tab-active-border-top:                 disabled;
 @tab-active-background:                 @tab-selected-background;
 @tab-active-box-shadow:                 @tab-selected-box-shadow;
 @tab-active-color:                      @tab-selected-color;
