Places: Manually integrated places specific changes from r76602
git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13570 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/places/skin/places.p.less
+++ b/src/modules/places/skin/places.p.less
@@ -137,9 +137,12 @@ undo-button {
 
 /* No default grippy image. Splitter-like cursor as appropriate. */
 #placesSubpanelSplitter {
+  -moz-appearance: none;
   background: transparent !important;
-  border: none;
-  border-top: solid 1px ThreeDShadow;
+  border: 0 !important;
+}
+#placesSubpanelSplitterHbox {
+  border-top: 1px dashed @panel-border-color;
 }
 #placesSubpanelSplitter > grippy {
   background-image: none !important;
