fix: Skin: Update dialog looks funky http://bugs.activestate.com/show_bug.cgi?id=100208
(integrated from komodo (trunk) change 81735 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13571 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -171,3 +171,7 @@
 @tooltip-background:                        disabled;
 @tooltip-border:                            disabled;
 @tooltip-color:                             disabled;
+
+/* Wizards */
+@wizard-header-border:                      disabled;
+@wizard-buttons-border:                     disabled;
