--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -547,3 +547,25 @@ tooltip
         color: @tooltip-color;
     }
 }
+
+/* Wizards */
+
+wizard
+{
+
+    wizardpage,
+    .wizard-header
+    {
+        background: @window-background;
+        border-bottom: @wizard-header-border;
+        color: @window-color;
+    }
+
+    .wizard-buttons
+    {
+        background: @bottom-background;
+        border-top: @wizard-buttons-border;
+    }
+
+}
+
