--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -157,3 +157,7 @@
 @tooltip-background:                        lighten(@window-background, 5%);
 @tooltip-border:                            1px solid lighten(@main-border-color, 5%);
 @tooltip-color:                             @window-color;
+
+/* Wizards */
+@wizard-header-border:                      2px solid @main-border-color;
+@wizard-buttons-border:                     none;
