fix: Skin: Alert dialog not styled on abyss http://bugs.activestate.com/show_bug.cgi?id=100170
(integrated from komodo (trunk) change 81740 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13575 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -175,3 +175,12 @@
 /* Wizards */
 @wizard-header-border:                      disabled;
 @wizard-buttons-border:                     disabled;
+
+/* Alerts */
+@alertbox-background:                       disabled;
+@alertbox-border:                           disabled;
+
+@alertbox-image-background:                 disabled;
+@alertbox-image-border:                     disabled;
+
+@alertbox-text-background:                  disabled;
