--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -569,3 +569,21 @@ wizard
 
 }
 
+/* Alerts */
+
+.alertBox
+{
+    background: @alertbox-background !important;
+    border: @alertbox-border !important;
+}
+
+.alertImageBox
+{
+    background: @alertbox-image-background !important;
+    border: @alertbox-image-border !important;
+}
+
+.alertTextBox, .alertCloseBox
+{
+    background: @alertbox-text-background !important;
+}
