--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -161,3 +161,12 @@
 /* Wizards */
 @wizard-header-border:                      2px solid @main-border-color;
 @wizard-buttons-border:                     none;
+
+/* Alerts */
+@alertbox-background:                       -moz-linear-gradient(top, rgba(80, 157, 212, 0.05) 15%, rgba(80, 157, 212, 0.1) 100%);
+@alertbox-border:                           @main-border;
+
+@alertbox-image-background:                 rgba(0,0,0,0.2);
+@alertbox-image-border:                     none;
+
+@alertbox-text-background:                  transparent;
