Skin: Adjust main toolbar padding across all platforms to be vertically centered
(integrated from komodo (trunk) change 81760 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13583 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/toolbars.less
+++ b/src/chrome/komodo/skin/plat/gnome/toolbars.less
@@ -19,6 +19,7 @@ toolbar #historyRecentLocations {
 
 #main-toolboxrow {
   -moz-appearance: none !important;
+  padding-top: 2px;
 
   .toolbarbutton-text
   {
