--- a/src/modules/abyss_skin/content/platform/win/platform.less
+++ b/src/modules/abyss_skin/content/platform/win/platform.less
@@ -1,5 +1,15 @@
 @import url("chrome://komodo/skin/plat/current/platform.less");
 
+#main-toolboxrow-wrapper
+{
+    padding-top: 3px;
+}
+
+#main-toolboxrow
+{
+    padding-bottom: 0;
+}
+
 tabpanels caption
 {
     -moz-appearance: none;
