--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -262,6 +262,15 @@ wizard#accountSetup
             padding-left: 4px;
             padding-right: 4px;
         }
+
+        &[focused]
+        {
+            border: 0;
+            border-top: 1px;
+            border-bottom: 1px;
+            border-style: dotted;
+            border-color: grey;
+        }
     }
 }
 
