skins: mac: another tweak to catch oversized retina icons * this is for the editor tabstrip drop down menu
(integrated from komodo (trunk) change 81829 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13592 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/iconset_cupertino/skin/rules.less
+++ b/src/modules/iconset_cupertino/skin/rules.less
@@ -21,6 +21,7 @@ button, toolbarbutton, menuitem
 .menu-iconic-icon,
 treechildren::-moz-tree-image,
 .textbox-search-icon,
+.native_file_image,
 dropmarker > image
 {
     max-width: 16px;
