--- a/src/modules/iconset_cupertino_blue/skin/rules.less
+++ b/src/modules/iconset_cupertino_blue/skin/rules.less
@@ -21,6 +21,7 @@ button, toolbarbutton, menuitem
 .menu-iconic-icon,
 treechildren::-moz-tree-image,
 .textbox-search-icon,
+.native_file_image,
 dropmarker > image
 {
     max-width: 16px;
