statubar: trim down the width of the file encoding and language items
(integrated from komodo (trunk) change 81864 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13604 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -290,7 +290,17 @@ statusbarpanel > toolbarbutton[type="menu"] > dropmarker {
     min-width: 100px !important;
 }
 
-#statusbar-encoding, #statusbar-language, #statusbar-section {
+#statusbar-encoding {
+    min-width: 8em;
+    max-width: 8em;
+}
+
+#statusbar-language {
+    min-width: 8em;
+    max-width: 10em;
+}
+
+#statusbar-section {
     min-width: 150px !important;
 }
 
