fix: Skin: unified menu icon was using wrong icon prefix path http://bugs.activestate.com/show_bug.cgi?id=100319
(integrated from komodo (trunk) change 81886 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13609 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -111,7 +111,6 @@
 @icon-scroll-arrow-left-hover:  url("chrome://komodo/skin/images/scrollArrowLeft_hover.png");
 @icon-scroll-arrow-left-disabled: url("chrome://komodo/skin/images/scrollArrowLeft_disable.png");
 @icon-gear:                     url("@{icon-url-prefix}ko_cog_small.png");
-@icon-menu:                     url("@{icon-url-prefix}menu3.png");
 @icon-list-item-down:           url("@{icon-url-prefix}arrow-down4.png");
 @icon-list-item-up:             url("@{icon-url-prefix}arrow-up4.png");
 @icon-list-item-add:            url("@{icon-url-prefix}plus.png");
@@ -187,6 +186,7 @@
 @icon-toolbar-paste:            url("@{icon-toolbar-url-prefix}paste2.png");
 @icon-toolbar-print:            url("@{icon-toolbar-url-prefix}print.png");
 @icon-toolbar-help:             url("@{icon-toolbar-url-prefix}question2.png");
+@icon-toolbar-menu:             url("@{icon-toolbar-url-prefix}menu3.png");
 
 /* Toolbars - Tools */
 @icon-toolbar-browser-preview:  url("@{icon-toolbar-url-prefix}earth.png");
