--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -409,11 +409,6 @@ page .cog-icon,
     list-style-image: @icon-gear !important;
 }
 
-.menu-icon
-{
-    list-style-image: @icon-menu !important;
-}
-
 .new-template-icon
 {
     list-style-image: @icon-new-template;
@@ -842,6 +837,11 @@ treechildren::-moz-tree-image(remotefile)
     .komodo-button-bugs
     {
         list-style-image: @icon-bugs;
+    }
+
+    .menu-icon
+    {
+        list-style-image: @icon-toolbar-menu !important;
     }
 
 }
