fix: Ambiance Skin: Awkward white border under main toolbox
(integrated from komodo (trunk) change 81888 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13611 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/gtk_ambiance/skin/_config/toolbars.less
+++ b/src/modules/gtk_ambiance/skin/_config/toolbars.less
@@ -2,6 +2,7 @@
 
 @main-toolbox-background:                    -moz-linear-gradient(top, #3b3a36 0%, #56544C 100%);
 @main-toolbox-button-background-color-active:rgba(0,0,0, 0.30) !important;
+@main-toolbox-border-bottom:                 0;
 
 @main-toolbox-button-first-border-width:     1px;
 @main-toolbox-button-last-border-width:      1px;
