fix: Abyss: Update dialog has odd styling on Windows/Mac http://bugs.activestate.com/show_bug.cgi?id=100283
(integrated from komodo (trunk) change 81890 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13613 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -173,7 +173,9 @@
 @tooltip-color:                             disabled;
 
 /* Wizards */
+@wizard-header-appearance:                  disabled;
 @wizard-header-border:                      disabled;
+@wizard-buttons-appearance:                 disabled;
 @wizard-buttons-border:                     disabled;
 
 /* Alerts */
