--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -159,8 +159,10 @@
 @tooltip-color:                             @window-color;
 
 /* Wizards */
+@wizard-header-appearance:                  none;
 @wizard-header-border:                      2px solid @main-border-color;
 @wizard-buttons-border:                     none;
+@wizard-buttons-appearance:                 none;
 
 /* Alerts */
 @alertbox-background:                       -moz-linear-gradient(top, rgba(80, 157, 212, 0.05) 15%, rgba(80, 157, 212, 0.1) 100%);
