fix: Abyss: URI Mapping dialog has odd looking captions on Windows http://bugs.activestate.com/show_bug.cgi?id=100261
(integrated from komodo (trunk) change 81891 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13614 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -163,8 +163,9 @@
 /* Groupboxes */
 @groupbox-appearance:                       disabled;
 @groupbox-border:                           disabled;
-@groupbox-caption-font-weight:              disabled;
-@groupbox-caption-background:               disabled;
+
+@caption-font-weight:                       disabled;
+@caption-background:                        disabled;
 
 /* Tooltips */
 @tooltip-appearance:                        disabled;
