--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -527,12 +527,12 @@ groupbox
 {
     -moz-appearance: @groupbox-appearance;
     border: @groupbox-border;
+}
 
-    caption
-    {
-        font-weight: @groupbox-caption-font-weight;
-        background: @groupbox-caption-background;
-    }
+caption
+{
+    font-weight: @caption-font-weight;
+    background: @caption-background;
 }
 
 /* Tooltips */
