--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -149,8 +149,9 @@
 /* Groupboxes */
 @groupbox-appearance:                       none;
 @groupbox-border:                           0;
-@groupbox-caption-font-weight:              bold;
-@groupbox-caption-background:               transparent;
+
+@caption-font-weight:                       bold;
+@caption-background:                        transparent;
 
 /* Tooltips */
 @tooltip-appearance:                        none;
