fix: UI: scintilla background colour leaks into find bar http://bugs.activestate.com/show_bug.cgi?id=100441
(integrated from komodo (trunk) change 82270 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13719 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -594,3 +594,10 @@ wizard
 {
     background: @alertbox-text-background !important;
 }
+
+/* Find bar */
+ko-findbar
+{
+    background: @window-background;
+    border-top: @main-border;
+}
