fix: retina: no retina icons in 8.5.0 http://bugs.activestate.com/show_bug.cgi?id=100549
(integrated from komodo (trunk) change 82271 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13721 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/iconset_cupertino_blue/skin/rules.less
+++ b/src/modules/iconset_cupertino_blue/skin/rules.less
@@ -1,7 +1,9 @@
 @media (min-resolution: 144dpi)
 {
     @import url("chrome://iconset-cupertino-blue/skin/config-hidpi.less");
-    @import url("chrome://komodo/skin/plat/shared/icons_rules.less");
+
+    /* Force import by appending some bogus info, as less forces the import-once behavior */
+    @import url("chrome://komodo/skin/plat/shared/icons_rules.less?hidpi");
 }
 
 button, toolbarbutton, menuitem
