fix: Skin: Statusbar message close button causing statusbar to be very large on retina displays with cupertino iconsets http://bugs.activestate.com/show_bug.cgi?id=100668
(integrated from komodo (trunk) change 82331 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13748 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/iconset_cupertino/skin/rules.less
+++ b/src/modules/iconset_cupertino/skin/rules.less
@@ -46,3 +46,10 @@ button > hbox.button-box > image.button-icon
 {
     max-width: none;
 }
+
+/* Explicitely override statusbar message close icon max-width, we need
+   to fix this properly for a larger release, ie. fix the max-width none rule above */
+#statusbar-message-clear .button-icon;
+{
+    max-width: 16px;
+}
