fix: Skin: Typo in r82331 http://bugs.activestate.com/show_bug.cgi?id=100668
(integrated from komodo (trunk) change 82333 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13750 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/iconset_cupertino/skin/rules.less
+++ b/src/modules/iconset_cupertino/skin/rules.less
@@ -49,7 +49,7 @@ button > hbox.button-box > image.button-icon
 
 /* Explicitely override statusbar message close icon max-width, we need
    to fix this properly for a larger release, ie. fix the max-width none rule above */
-#statusbar-message-clear .button-icon;
+#statusbar-message-clear .button-icon
 {
     max-width: 16px;
 }
