--- a/src/modules/iconset_cupertino_blue/skin/rules.less
+++ b/src/modules/iconset_cupertino_blue/skin/rules.less
@@ -49,7 +49,7 @@ button > hbox.button-box > image.button-icon
 
 /* Explicitely override statusbar message close icon max-width, we need
    to fix this properly for a larger release, ie. fix the max-width none rule above */
-#statusbar-message-clear .button-icon;
+#statusbar-message-clear .button-icon
 {
     max-width: 16px;
 }
