find results: remove hard coded coloring of the description element * this is so it looks better on Abyss skin
(integrated from komodo (trunk) change 82712 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13869 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/find.css
+++ b/src/chrome/komodo/skin/find.css
@@ -85,3 +85,7 @@ treechildren.findresults::-moz-tree-row(warning, selected, focus) {
     border: inherit;
     margin: inherit;
 }
+
+.find-description-highlight {
+    color:  #bb0000;
+}
