fix: Icons: Hide checkbox/radio icons in view tabs/sidebars popup as they are currently non-functional (temp workaround) http://bugs.activestate.com/show_bug.cgi?id=100548
(integrated from komodo (trunk) change 82997 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13964 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/menus.less
@@ -141,3 +141,10 @@ menuitem[type="radiobox"] > .menu-iconic-left
 {
     -moz-appearance: @menuitem-radiobox-icon-appearance;
 }
+
+/* View Toolbars & Tabs */
+/* See Bug #100432 */
+#menu_view_tabs menuitem[type="checkbox"] > .menu-iconic-left
+{
+    visibility: hidden;
+}
