fix: Skin: Button text in the toolbar will now properly show when using a hidpi (cupertino) icon set http://bugs.activestate.com/show_bug.cgi?id=100933 rn=
(integrated from komodo (trunk) change 82999 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13968 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/iconset_cupertino/skin/rules.less
+++ b/src/modules/iconset_cupertino/skin/rules.less
@@ -29,6 +29,13 @@ dropmarker > image
     max-width: 16px;
 }
 
+#main-toolboxrow toolbarbutton > image,
+#main-toolboxrow toolbarbutton .toolbarbutton-icon
+{
+    width: 16px;
+    max-width: none;
+}
+
 #placesViewbox_placesWrapper
 #findresults_tabpanel-toolbarbox,
 .panel-toolbar-buttons
