--- a/src/modules/iconset_cupertino_blue/skin/rules.less
+++ b/src/modules/iconset_cupertino_blue/skin/rules.less
@@ -29,6 +29,13 @@ dropmarker > image
     max-width: 16px;
 }
 
+#main-toolboxrow toolbarbutton > image,
+#main-toolboxrow toolbarbutton .toolbarbutton-icon
+{
+    width: 16px;
+    max-width: none;
+}
+
 #placesViewbox_placesWrapper
 #findresults_tabpanel-toolbarbox,
 .panel-toolbar-buttons
