UI: Added a Getting Started dialog to Komodo that helps new users get the basics of Komodo http://bugs.activestate.com/show_bug.cgi?id=98250 rn=
(integrated from komodo (trunk) change 83046 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13982 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/window.less
+++ b/src/chrome/komodo/skin/plat/mac/window.less
@@ -11,3 +11,9 @@ statusbar statusbarpanel toolbarbutton[type="menu"] > dropmarker
 {
     display: none;
 }
+
+statusbar.bottombar > statusbarpanel
+{
+    -moz-appearance: statusbarpanel;
+    background: inherit;
+}
