--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -107,6 +107,7 @@
 @radio-disabled-opacity:             disabled;
 
 @statusbar-appearance:                  statusbar;
+@statusbarpanel-appearance:             statusbarpanel;
 @statusbar-background:                  none;
 @statusbar-text-color:                  disabled;
 @statusbar-font:                        disabled;
