--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -261,7 +261,7 @@ button:not([disabled="true"]):not(.button-link):not([type="menu"]),
 
 /* Statusbar Buttons */
 
-statusbar button:not([type="menu"]), statusbar toolbarbutton
+statusbar:not(.bottombar) button:not([type="menu"]), statusbar:not(.bottombar) toolbarbutton
 {
     -moz-appearance: @statusbar-button-appearance;
     background: @statusbar-button-background;
