--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -103,6 +103,7 @@
 @radio-disabled-opacity:             0.6;
 
 @statusbar-appearance:                  none;
+@statusbarpanel-appearance:             none;
 @statusbar-background:                  @window-background -moz-linear-gradient(-90deg , rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.3) 50px);
 @statusbar-text-color:                  fadeout(@window-color, 30%);
 @statusbar-font:                        inherit;
